# ComfyUI-Chord

./: .gitmodules  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
examples/: chord_example.json  chord_flux_t2i_image_to_material.json  chord_image_to_material.json  chord_sdxl_t2i_image_to_material.json
src/: __init__.py  io.py  util.py
src/module/: __init__.py  base.py  chord.py  light.py  stable_diffusion.py
